--- a/UI.WebMvcCore/UI.WebMvcCore.csproj
+++ b/UI.WebMvcCore/UI.WebMvcCore.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
 		<UserSecretsId>aspnet-UI.WebMvcCore-33A371DF-1C2B-4B84-A3C5-2EBD148F4CCB</UserSecretsId>
-		<NoWin32Manifest>true</NoWin32Manifest>
+		<StartupObject>UI.WebMvcCore.Program</StartupObject>
 	</PropertyGroup>
 
 	<ItemGroup>
