--- a/UI.WebMvcCore/Properties/launchSettings.json
+++ b/UI.WebMvcCore/Properties/launchSettings.json
@@ -17,7 +17,9 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "sqlDebugging": true,
+      "nativeDebugging": true
     },
     "UI.WebMvcCore": {
       "commandName": "Project",
@@ -26,7 +28,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000;"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
