6 Ekim 2021 03:54 CSS select option heigth setting chrome

--- a/UI.WebMvcCore/appsettings.json
+++ b/UI.WebMvcCore/appsettings.json
@@ -2,11 +2,11 @@
   "TokenSettings": {
     "Audience": "orguntay.ata@gmail.com",
     "Issuer": "orguntay.ata@gmail.com",
-    "AccessTokenExpiration": 10,
+    "AccessTokenExpiration": 40,
     "SecurityKey": "CAFE BABE CAFE BABE"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Provider=sqloledb;Data Source=SQL5108.site4now.net,1433;Initial Catalog=db_a7a56c_orguntay;User Id=db_a7a56c_orguntay_admin;Password=Papatya1453;"
+    "DefaultConnection": "Server=77.245.159.8\\MSSQLSERVER2019; Initial Catalog=mimarsof_; user Id=akr3p; pwd=Rr3tt5!3; Trusted_Connection=False"
   },
   "Logging": {
     "LogLevel": {
